--- a/package.json
+++ b/package.json
@@ -19,5 +19,20 @@
   "bugs": {
     "url": "https://github.com/dune44/MENTL-Boilerplate/issues"
   },
-  "homepage": "https://github.com/dune44/MENTL-Boilerplate#readme"
+  "homepage": "https://github.com/dune44/MENTL-Boilerplate#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "mongodb": "^3.4.1",
+    "mongoose": "^4.13.20"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "env-cmd": "^10.0.1",
+    "mocha": "^7.0.0",
+    "supertest": "^4.0.2"
+  }
 }
