--- a/package.json
+++ b/package.json
@@ -13,9 +13,20 @@
     "type": "git",
     "url": "git+https://github.com/dune44/MENTL-Boilerplate.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "mongodb",
+    "mongoose",
+    "express",
+    "jsonwebtoken",
+    "jwt",
+    "api",
+    "mocha",
+    "chai",
+    "boilerplate",
+    "template"
+  ],
+  "author": "Richard Silence",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/dune44/MENTL-Boilerplate/issues"
   },
