--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongodb": "^3.4.1",
-    "mongoose": "^=5.7.5"
+    "mongoose": "^=5.7.5",
+    "osom": "^3.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
