changed out mongo for couchbase. switched to a more mvc pattern.

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "url": "git+https://github.com/dune44/MENTL-Boilerplate.git"
   },
   "keywords": [
-    "mongodb",
-    "mongoose",
+    "couchbase",
     "express",
     "jsonwebtoken",
     "jwt",
@@ -32,19 +31,18 @@
   },
   "homepage": "https://github.com/dune44/MENTL-Boilerplate#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
-    "mongodb": "^3.4.1",
-    "mongoose": "^=5.7.5",
-    "osom": "^3.0.3"
+    "bcryptjs": "2.4.3",
+    "body-parser": "1.19.0",
+    "couchbase": "git+https://github.com/couchbase/couchnode.git#master",
+    "express": "4.17.1",
+    "jsonwebtoken": "8.5.1",
+    "moment": "2.24.0",
+    "osom": "3.0.3"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "env-cmd": "^10.0.1",
-    "mocha": "^7.0.0",
-    "supertest": "^4.0.2"
+    "chai": "4.2.0",
+    "env-cmd": "10.0.1",
+    "mocha": "7.0.0",
+    "supertest": "4.0.2"
   }
 }
