--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "MENTL-Boilerplate": "index.js"
   },
   "scripts": {
+    "dev": "env-cmd -f ./.config/dev.env node bin/index.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -37,7 +38,9 @@
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
     "moment": "2.24.0",
-    "osom": "3.0.3"
+    "osom": "3.0.3",
+    "uuid": "^3.4.0",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "chai": "4.2.0",
