--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "MENTL-Boilerplate": "index.js"
   },
   "scripts": {
-    "dev": "env-cmd -f ./.config/dev.env node bin/index.js ",
+    "dev": "env-cmd -f ./.config/dev.env node bin/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,13 +34,16 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
-    "couchbase": "git+https://github.com/couchbase/couchnode.git#master",
+    "couchbase": "^2.6.10",
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
     "moment": "2.24.0",
     "osom": "3.0.3",
+    "qrcode": "^1.4.4",
+    "speakeasy": "^2.0.0",
     "uuid": "^3.4.0",
-    "validator": "^12.1.0"
+    "validator": "^12.1.0",
+    "wrap-sync": "^1.0.0"
   },
   "devDependencies": {
     "chai": "4.2.0",
