--- a/package.json
+++ b/package.json
@@ -34,21 +34,21 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
-    "couchbase": "^2.6.10",
+    "couchbase": "2.6.10",
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
     "moment": "2.24.0",
     "osom": "3.0.3",
-    "qrcode": "^1.4.4",
-    "speakeasy": "^2.0.0",
-    "uuid": "^3.4.0",
-    "validator": "^12.1.0",
-    "wrap-sync": "^1.0.0"
+    "qrcode": "1.4.4",
+    "speakeasy": "2.0.0",
+    "uuid": "3.4.0",
+    "validator": "12.2.0",
+    "wrap-sync": "1.0.0"
   },
   "devDependencies": {
     "chai": "4.2.0",
     "env-cmd": "10.0.1",
-    "mocha": "7.0.0",
+    "mocha": "7.0.1",
     "supertest": "4.0.2"
   }
 }
