minor code adjustements, nothing life changing here.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "env-cmd -f ./.config/dev.env node bin/index.js",
-    "test": "env-cmd -f ./.config/test.env ./node_modules/mocha/bin/mocha tests --recursive"
+    "test": "env-cmd -f ./.config/test.env ./node_modules/mocha/bin/mocha tests --recursive  --exit"
   },
   "repository": {
     "type": "git",
@@ -48,6 +48,7 @@
   "devDependencies": {
     "chai": "4.2.0",
     "env-cmd": "10.0.1",
+    "istanbul": "^0.4.5",
     "mocha": "7.0.1",
     "supertest": "4.0.2"
   }
