--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
-    "couchbase": "2.6.10",
+    "couchbase": "^2.6.10",
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
     "moment": "2.24.0",
