--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
     "moment": "2.24.0",
+    "moment-json-parser": "^0.9.1",
     "osom": "3.0.3",
     "qrcode": "1.4.4",
     "speakeasy": "2.0.0",
