--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
   },
   "devDependencies": {
     "chai": "4.2.0",
+    "chai-http": "^4.3.0",
+    "chai-totp": "^1.0.1",
     "dirty-chai": "^2.0.1",
     "env-cmd": "10.1.0",
     "istanbul": "^0.4.5",
     "mocha": "7.1.1",
+    "otplib": "^12.0.1",
     "supertest": "4.0.2"
   }
 }
