--- a/package.json
+++ b/package.json
@@ -34,30 +34,30 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
-    "couchbase": "^2.6.11",
+    "couchbase": "3.1.3",
     "express": "4.17.1",
     "express-rate-limit": "^5.1.1",
-    "helmet": "^3.22.0",
+    "helmet": "4.6.0",
     "jsonwebtoken": "8.5.1",
-    "moment": "2.24.0",
-    "moment-json-parser": "^0.9.1",
-    "nodemailer": "^6.4.6",
+    "moment": "2.29.1",
+    "moment-json-parser": "0.9.1",
+    "nodemailer": "6.6.1",
     "osom": "3.0.3",
     "qrcode": "1.4.4",
     "speakeasy": "2.0.0",
-    "uuid": "7.0.3",
-    "validator": "13.0.0",
+    "uuid": "8.3.2",
+    "validator": "13.6.0",
     "wrap-sync": "1.0.0"
   },
   "devDependencies": {
-    "chai": "4.2.0",
-    "chai-http": "^4.3.0",
-    "chai-totp": "^1.0.1",
-    "dirty-chai": "^2.0.1",
+    "chai": "4.3.4",
+    "chai-http": "4.3.0",
+    "chai-totp": "1.0.1",
+    "dirty-chai": "2.0.1",
     "env-cmd": "10.1.0",
-    "istanbul": "^0.4.5",
-    "mocha": "7.1.1",
-    "otplib": "^12.0.1",
-    "supertest": "4.0.2"
+    "istanbul": "0.4.5",
+    "mocha": "9.0.0",
+    "otplib": "12.0.1",
+    "supertest": "6.1.3"
   }
 }
